--- a/iOS/SideDish/Podfile
+++ b/iOS/SideDish/Podfile
@@ -3,7 +3,7 @@
 
 target 'SideDish' do
   use_frameworks!
-  pod 'Toaster'
+  pod 'Toaster', :git => 'https://github.com/devxoul/Toaster.git', :branch => 'master'
   pod 'Alamofire'
-  
+
 end
