[#7] chore: Alamofire 적용 오류 수정

--- a/iOS/SideDish/Podfile
+++ b/iOS/SideDish/Podfile
@@ -2,7 +2,7 @@
  platform :ios, '13.0'
 
 target 'SideDish' do
-  use_frameworks!
+  use_modular_headers!
   pod 'Toaster', :git => 'https://github.com/devxoul/Toaster.git', :branch => 'master'
   pod 'Alamofire'
 
