[#3] chore: storybook plugin 설치
why: storybook에서 지원하는 기능 중, react component 단위 별로 볼 수
있는 기능이 있어서, 이를 하고자, 해당 패키지를 설치했다.

--- a/FE/package.json
+++ b/FE/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18"
+    "@storybook/react": "^5.3.18",
+    "storybook-addon-jsx": "^7.2.3"
   }
 }
