--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'war'
+	id 'spring-boot'
 }
 
 group = 'com.codesquad'
@@ -20,8 +22,12 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 test {
 	useJUnitPlatform()
+}
+war {
+	baseName = 'spring-boot-war'
 }
