--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
