--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	}
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
