config: OAuth2 App redirect link & deploy profiles changed

--- a/BE/src/main/resources/application-deploy.properties
+++ b/BE/src/main/resources/application-deploy.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://15.165.138.17:3306/sidedish
-spring.datasource.username=codesquad
-spring.datasource.password=codesquad
+spring.datasource.url=jdbc:mysql://13.125.179.178:3306/sidedish
+spring.datasource.username=sidedish
+spring.datasource.password=sidedish
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
 
