feat: Redirect URL after login completed - minimal changes for TODO records

--- a/BE/src/main/resources/application-deploy.properties
+++ b/BE/src/main/resources/application-deploy.properties
@@ -8,6 +8,7 @@ logging.level.org.springframework=info
 logging.level.sql=DEBUG
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
+#client.client_id=6c72dbbb9ff995db580a TODO: @Value 어노테이션 활용해서 하고 싶은데 static 에러가 난다
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
