--- a/BE/src/main/resources/application-deploy.properties
+++ b/BE/src/main/resources/application-deploy.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://13.125.179.178:3306/sidedish
 spring.datasource.username=sidedish
 spring.datasource.password=sidedish
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.initialization-mode=always
+# spring.datasource.initialization-mode=always
 
 logging.level.org.springframework=info
 logging.level.sql=DEBUG
