--- a/BE/src/main/resources/application-deploy.properties
+++ b/BE/src/main/resources/application-deploy.properties
@@ -2,12 +2,13 @@ spring.datasource.url=jdbc:mysql://13.125.179.178:3306/sidedish
 spring.datasource.username=sidedish
 spring.datasource.password=sidedish
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.initialization-mode=always
+# spring.datasource.initialization-mode=always
 
 logging.level.org.springframework=info
 logging.level.sql=DEBUG
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
+#client.client_id=6c72dbbb9ff995db580a TODO: @Value 어노테이션 활용해서 하고 싶은데 static 에러가 난다
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
