--- a/iOS/SideDish/Podfile
+++ b/iOS/SideDish/Podfile
@@ -5,5 +5,6 @@ target 'SideDish' do
   use_modular_headers!
   pod 'Toaster', :git => 'https://github.com/devxoul/Toaster.git', :branch => 'master'
   pod 'Alamofire'
+  pod 'Floaty', '~> 4.2.0'
 
 end
