--- a/iOS/SideDish/Podfile
+++ b/iOS/SideDish/Podfile
@@ -6,5 +6,5 @@ target 'SideDish' do
   pod 'Toaster', :git => 'https://github.com/devxoul/Toaster.git', :branch => 'master'
   pod 'Alamofire'
   pod 'Floaty', '~> 4.2.0'
-
+  pod 'SwiftLint'
 end
